updated theme / style, and added information

--- a/index.html
+++ b/index.html
@@ -7,23 +7,30 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="tech-bg">
+        <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%">
+            <rect width="100%" height="100%" fill="#000000"/>
+            <line x1="20%" y1="20%" x2="25%" y2="25%" stroke="#00ff00" stroke-width="1" opacity="0.2"/>
+            <line x1="80%" y1="20%" x2="75%" y2="25%" stroke="#00ff00" stroke-width="1" opacity="0.2"/>
+            <circle cx="50%" cy="50%" r="100" fill="none" stroke="#00ff00" stroke-width="1" opacity="0.1"/>
+        </svg>
+    </div>
     <div class="container">
         <header>
-            <h1>Welcome to My Self-Hosted Web Server</h1>
+            <h1>Welcome</h1>
         </header>
         <main>
             <section class="info">
-                <h2>About This Server</h2>
-                <p>This website is hosted on a 2013 Dell laptop running Debian 12 with Caddy as the web server.</p>
-                <p>Our focus is on speed and responsiveness, providing you with the fastest browsing experience possible.</p>
+                <p>I had an old laptop laying around and decided to host my own web server as a learning experience.</p>
+                <p>I will slowly update the site as I continue to work on small projects that I am interested in.</p>
+                <p>Please feel free to reach out via email @ <a href="mailto:sieglingera@gmail.com">sieglingera@gmail.com</a></p>
             </section>
             <nav class="navigation">
-                <a href="resume.html" class="button">View Resume</a>
-                <a href="resume.html#projects" class="button">View Projects</a>
+                <a href="resume.html" class="button">Resume / Projects</a>
             </nav>
         </main>
         <footer>
-            <p>&copy; 2024 Self-Hosted Web Server. All rights reserved.</p>
+            <p>&copy; 2025. All rights reserved. Just kidding.</p>
         </footer>
     </div>
 </body>
