--- a/resume.html
+++ b/resume.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="tech-bg">
+        <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%">
+            <rect width="100%" height="100%" fill="#000000"/>
+            <line x1="20%" y1="80%" x2="25%" y2="75%" stroke="#00ff00" stroke-width="1" opacity="0.2"/>
+            <line x1="80%" y1="80%" x2="75%" y2="75%" stroke="#00ff00" stroke-width="1" opacity="0.2"/>
+            <circle cx="50%" cy="50%" r="150" fill="none" stroke="#00ff00" stroke-width="1" opacity="0.1"/>
+        </svg>
+    </div>
     <div class="container">
         <header>
             <h1>Resume & Projects</h1>
@@ -14,20 +22,19 @@
         <main>
             <section id="resume" class="resume">
                 <h2>Resume</h2>
-                <!-- Add your resume content here -->
-                <p>to-do list. I will update soon</p>
+                <p>PwC - Technology consulting 2022 - 2025</p>
+                <p>Intecrowd - Technology Consulting 2025 - Present</p>
             </section>
             <section id="projects" class="projects">
                 <h2>Projects</h2>
-                <!-- Add your projects content here -->
-                <p>this is at least a start</p>
+                <p>Work in progress. When I am not working, I find interest in smart glasses (specifically those that run on AugmentOS), computer vision, and data compression.</p>
             </section>
             <nav class="navigation">
                 <a href="index.html" class="button">Back to Home</a>
             </nav>
         </main>
         <footer>
-            <p>&copy; 2024 Self-Hosted Web Server. All rights reserved.</p>
+            <p>&copy; 2025. All rights reserved. Just for fun.</p>
         </footer>
     </div>
 </body>
